<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:gravity="center"
    android:padding="30dip">
    
    

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_options"
        android:layout_marginBottom="25dip"
        android:textSize="25sp" />

    <Button
        android:id="@+id/send_report_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_report" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password" />
    
</LinearLayout>